Thu Sep 29 12:34:50 2005  Simon McQueen  <sm@prismtech.com>

        * tao/Makefile.am:

          Removed WrongTransactionS.inl - file no longer in CVS.

Thu Sep 29 09:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/AVStreams/Bidirectional_Flows/sender.cpp
        * orbsvcs/tests/AVStreams/Component_Switching/distributer.cpp
        * orbsvcs/tests/AVStreams/Modify_QoS/sender.cpp
        * orbsvcs/tests/AVStreams/Multicast/server.cpp
        * orbsvcs/tests/AVStreams/Multiple_Flows/sender.cpp
        * orbsvcs/tests/AVStreams/Pluggable/ftp.cpp
        * tests/Big_Twoways/client.cpp
        * tests/Two_Objects/Object_Factory_i.cpp
          Fixed fuzz errors

        * utils/catior/catior.cpp
          Wchar fix

Thu Sep 29 07:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Smart_Proxies/server.cpp:
        * tests/Smart_Proxies/Benchmark/client.cpp:
        * tests/Smart_Proxies/Benchmark/server.cpp:
        * tests/Smart_Proxies/On_Demand/server.cpp:
        * tests/Smart_Proxies/Policy/client.cpp:
        * tests/Smart_Proxies/Policy/server.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_EventChannel.cpp:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connector.cpp:
          Fixed fuzz errors

Thu Sep 29 07:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/ConsumerAdmin.cpp:
          Emulated exception fix

Thu Sep 29 07:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Connect_Strategy.h:
        * tao/ORB.h:
        * tao/PI_Server/Policy_Creator_T.h:
          Layout and documentation changes

        * tao/Strategies/SHMIOP_Connection_Handler.cpp:
          Updated debug statement to have the same layout as the other messages

        * tao/Stub.{h,cpp,i}:
          Use an Atomic_Op for the refcount, removed some accessors that are
          not needed and which violated the encapsulation principle. Made